# trustfall-adapters

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
filesystem-trustfall-adapter/: CHANGELOG.md  Cargo.toml  README.md
filesystem-trustfall-adapter/src/: adapter_impl.rs  edges.rs  entrypoints.rs  lib.rs  properties.rs  schema.graphql  tests.rs  vertex.rs
openapi-trustfall-adapter/: CHANGELOG.md  Cargo.toml  README.md
openapi-trustfall-adapter/src/: adapter_impl.rs  edges.rs  errors.rs  lib.rs  properties.rs  schema.graphql  tests.rs  utils.rs  vertex.rs
terraform-trustfall-adapter/: CHANGELOG.md  Cargo.toml  README.md
terraform-trustfall-adapter/src/: adapter_impl.rs  edges.rs  lib.rs  model.rs  properties.rs  schema.graphql  tests.rs  utils.rs  vertex.rs
