[workspace]
members = [
    "filesystem-trustfall-adapter",
    "openapi-trustfall-adapter",
    "terraform-trustfall-adapter",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
trustfall = "0.7.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
