[workspace]
members = [
    "filesystem-trustfall-adapter",
    "openapi-trustfall-adapter",
    "terraform-trustfall-adapter",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
trustfall = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
