[package]
name = "filesystem-trustfall-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Leslie de Jager"]
# You can find the supported categories here https://crates.io/category_slugs
categories = []
keywords = ["trustfall", "adapter"]
description = "Filesystem Trustfall adapter"
homepage = "https://github.com/ZimboPro/trustfall-adapters.git"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZimboPro/trustfall-adapters.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = "1.5.0"
