[package]
name = "openapi-trustfall-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
yaml-hash = "0.3.0"
openapiv3 = "2.0.0"
serde_yaml = "0.9.34"
