[package]
name = "openapi-trustfall-adapter"
version = "0.2.0"
edition = "2021"
authors = ["Leslie de Jager"]
# You can find the supported categories here https://crates.io/category_slugs
categories = []
keywords = ["trustfall"]
description = "OpenAPI Trustfall adapter"
homepage = "https://github.com/ZimboPro/trustfall-adapters.git"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZimboPro/trustfall-adapters.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
yaml-hash = "0.3.0"
openapiv3 = "2.0.0"
serde_yaml = "0.9.34"
thiserror = { workspace = true }
