[package]
name = "terraform-trustfall-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hcl-rs = "0.16.7"
anyhow = "1.0.81"
